--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -54,7 +54,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:visibility="gone"
-                    android:textColor="@color/black"
+                    android:textColor="#2196F3"
                     android:layout_marginTop="4dp"
                     tools:text="this is for test creator"
                     android:layout_width="wrap_content"
@@ -69,6 +69,7 @@
 
 
         <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
