--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/galleryFragment"
         android:name="com.example.imagesearchapp.ui.GalleryFragment"
-        android:label="fragment_gallery"
-        tools:layout="@layout/fragment_gallery" >
+        android:label="Galley"
+        tools:layout="@layout/fragment_gallery">
         <action
             android:id="@+id/action_galleryFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.imagesearchapp.ui.DetailFragment"
-        android:label="DetailFragment" >
+        android:label="photo">
         <argument
             android:name="photo"
             app:argType="com.example.imagesearchapp.model.UnSplashPhoto" />
